--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 33
         versionCode 1
-        versionName "1.0"
+        versionName "1.2"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         /*For now blur only*/
@@ -32,7 +32,7 @@ android {
 
     buildTypes {
         release {
-            debuggable false
+            debuggable true
            // signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -63,7 +63,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.7.0-alpha02'
-    implementation 'com.google.android.material:material:1.1.0-alpha09'
+   /* implementation 'com.google.android.material:material:1.1.0-alpha09'*/
     implementation 'commons-io:commons-io:2.4'
     implementation 'org.apache.commons:commons-lang3:3.4'
     implementation files('libs/login-with-amazon-sdk.jar')
@@ -80,10 +80,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.room:room-runtime:2.4.2'
     kapt 'androidx.room:room-compiler:2.4.2'
-    //Added bu SHAIK
-    implementation "net.zetetic:android-database-sqlcipher:4.4.0"
-    implementation "androidx.sqlite:sqlite:2.1.0"
+    implementation "net.zetetic:android-database-sqlcipher:4.5.4@aar"
+    implementation "androidx.sqlite:sqlite:2.2.0"
     implementation "androidx.datastore:datastore-preferences:1.0.0-beta01"
     implementation "androidx.security:security-crypto:1.1.0-alpha06"
+    implementation 'com.google.android.material:material:1.2.0'
 
 }
