1. Fixed Airplay Meta data not Certification 2. Added Issues Report 3. Revert Back the WifiScan List size changes 4. Added Listeners to Dynamic Sources 5. Small Database Changes 6. Other Jira issues

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -4,36 +4,39 @@
   package="com.libreAlexa">
 
   <application
-    android:name=".LibreApplication"
     android:allowBackup="false"
     android:configChanges="keyboardHidden|orientation|screenSize"
     android:hardwareAccelerated="false"
-    android:largeHeap="true">
+    android:largeHeap="true"
+    android:name=".LibreApplication">
+    <activity
+      android:exported="false"
+      android:name="com.cumulations.libreV2.activity.IssuesReportActivity" />
     <activity
       android:exported="false"
       android:name="com.cumulations.libreV2.activity.oem.SetUpDeviceActivity"
-      android:screenOrientation="portrait"/>
+      android:screenOrientation="portrait" />
     <activity
       android:exported="false"
       android:name="com.cumulations.libreV2.activity.oem.OpenGHomeAppActivity"
-      android:screenOrientation="portrait"/>
+      android:screenOrientation="portrait" />
     <activity
       android:exported="false"
       android:name="com.cumulations.libreV2.activity.oem.HelpImproveChromeCastActivity"
-      android:screenOrientation="portrait"/>
+      android:screenOrientation="portrait" />
     <activity
       android:exported="false"
       android:name="com.cumulations.libreV2.activity.oem.ActivateCastActivity"
-      android:screenOrientation="portrait"/>
+      android:screenOrientation="portrait" />
     <activity
       android:exported="false"
-      android:name="com.cumulations.libreV2.activity.oem.CastToSActivity"
       android:launchMode="singleInstance"
-      android:screenOrientation="portrait"/>
+      android:name="com.cumulations.libreV2.activity.oem.CastToSActivity"
+      android:screenOrientation="portrait" />
     <activity
       android:exported="true"
       android:name="com.cumulations.libreV2.activity.CTBluetoothHearSoundQtn"
-      android:screenOrientation="portrait"/>
+      android:screenOrientation="portrait" />
     <activity
       android:exported="true"
       android:name="com.cumulations.libreV2.activity.CTBluetoothPassCredentials"
@@ -51,26 +54,25 @@
       android:screenOrientation="portrait" />
     <activity
       android:exported="true"
-      android:name="com.libreAlexa.util.spotifyInstructions"
-      android:screenOrientation="portrait"/>
+      android:name=".util.spotifyInstructions"
+      android:screenOrientation="portrait" />
     <activity
       android:exported="true"
       android:label="@string/title_activity_google_cast_update_after_sac"
       android:launchMode="singleTask"
-      android:name="com.libreAlexa.Ls9Sac.GoogleCastUpdateAfterSac"
+      android:name=".Ls9Sac.GoogleCastUpdateAfterSac"
       android:screenOrientation="portrait" />
     <activity
       android:exported="true"
       android:label="@string/title_activity_gcast_update_status_available"
       android:launchMode="singleTask"
-      android:name="com.libreAlexa.Ls9Sac.GcastUpdateStatusAvailableListView"
+      android:name=".Ls9Sac.GcastUpdateStatusAvailableListView"
       android:screenOrientation="portrait" />
     <activity
       android:exported="true"
       android:label="@string/title_activity_welcome"
       android:name="com.cumulations.libreV2.activity.CTSplashScreenActivityV2"
-      android:screenOrientation="portrait">
-    </activity>
+      android:screenOrientation="portrait"></activity>
     <activity
       android:exported="true"
       android:launchMode="singleTask"
@@ -96,13 +98,12 @@
       android:launchMode="singleTask"
       android:name="com.cumulations.libreV2.activity.CTAmazonLoginActivity"
       android:screenOrientation="portrait" />
-
     <activity
-        android:name="com.amazon.identity.auth.device.authorization.AuthorizationActivity"
-        android:allowTaskReparenting="true"
-        android:launchMode="singleTask"
-        android:exported="true"
-        android:theme="@android:style/Theme.NoDisplay">
+      android:allowTaskReparenting="true"
+      android:exported="true"
+      android:launchMode="singleTask"
+      android:name="com.amazon.identity.auth.device.authorization.AuthorizationActivity"
+      android:theme="@android:style/Theme.NoDisplay">
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
 
@@ -110,8 +111,8 @@
         <category android:name="android.intent.category.BROWSABLE" />
 
         <data
-            android:host="${applicationId}"
-            android:scheme="amzn" />
+          android:host="${applicationId}"
+          android:scheme="amzn" />
       </intent-filter>
     </activity>
     <activity
@@ -119,18 +120,7 @@
       android:launchMode="singleTask"
       android:name="com.cumulations.libreV2.activity.CTAlexaThingsToTryActivity"
       android:screenOrientation="portrait" />
-    <service
-      android:exported="false"
-      android:name="com.libreAlexa.app.dlna.dmc.processor.upnp.CoreUpnpService" />
-    <service
-      android:exported="false"
-      android:name="com.libreAlexa.app.dlna.dmc.processor.upnp.LoadLocalContentService" />
-    <service
-      android:exported="false"
-      android:name="com.libreAlexa.DMRPlayerService" />
-    <service
-        android:exported="false"
-        android:name="com.cumulations.libreV2.activity.BluetoothLeService" />
+
     <activity
       android:exported="true"
       android:launchMode="singleTask"
@@ -152,6 +142,7 @@
       android:launchMode="singleTask"
       android:name="com.cumulations.libreV2.activity.CTMediaSourcesActivity"
       android:screenOrientation="portrait" />
+
     <activity
       android:exported="true"
       android:launchMode="singleTask"
@@ -187,18 +178,29 @@
       android:launchMode="singleTask"
       android:name="com.cumulations.libreV2.activity.CTBluetoothSomethingWrong"
       android:screenOrientation="portrait" />
-
     <meta-data
       android:name="io.fabric.ApiKey"
       android:value="b0f91dc7a6f0d7ee35d247281ac32a618a418970" />
+    <service
+      android:exported="false"
+      android:name=".app.dlna.dmc.processor.upnp.CoreUpnpService" />
+    <service
+      android:exported="false"
+      android:name=".app.dlna.dmc.processor.upnp.LoadLocalContentService" />
+    <service
+      android:exported="false"
+      android:name=".DMRPlayerService" />
 
-
+    <service
+      android:exported="false"
+      android:name="com.cumulations.libreV2.activity.BluetoothLeService" />
   </application>
+
   <queries>
     <package android:name="com.google.android.apps.chromecast.app" />
     <package android:name="com.spotify.music" />
+    <package android:name="com.aspiro.tidal" />
   </queries>
-
   <uses-feature
     android:name="android.hardware.bluetooth_le"
     android:required="true" />
@@ -206,7 +208,6 @@
   <uses-feature
     android:name="android.hardware.touchscreen"
     android:required="false" />
-
   <uses-permission android:name="android.permission.BLUETOOTH" />
   <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
   <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
@@ -224,6 +225,7 @@
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
 </manifest>
