--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ android {
         minSdkVersion 21
         targetSdkVersion 33
         versionCode 1
-        versionName "1.2"
+        //Remote logging version is 1.3(1.2)
+        versionName "1.3(1.2)"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         /*For now blur only*/
@@ -85,5 +86,7 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0-beta01"
     implementation "androidx.security:security-crypto:1.1.0-alpha06"
     implementation 'com.google.android.material:material:1.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
 
 }
