--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 33
         versionCode 1
-        //Remote logging version is 1.3(1.2)
-        versionName "1.3(1.2)"
+        versionName "1.0"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         /*For now blur only*/
