--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.5.7'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.room:room-runtime:2.4.2'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
     kapt 'androidx.room:room-compiler:2.4.2'
     implementation "net.zetetic:android-database-sqlcipher:4.5.4@aar"
     implementation "androidx.sqlite:sqlite:2.2.0"
