--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 33
         versionCode 1
-        versionName "1.0(1.3)+validations(1.2+)"
+        versionName "1.0(1.3)+(1.4))"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         /*For now blur only*/
