--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,15 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 
-/* Playstore upload changes: version code from 34 to 35 as old app supports 34 VC. and new app version 3.0*/
+/* Playstore upload changes: version code from 34 to 35 as old app supports 34 VC. and new app version 3.0
+* 1.0(1.3)+OtherNetwork(1.4+) before 1.0(1.3)+OtherNetwork(1.0)=> after*/
 android {
     compileSdkVersion 33
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 33
         versionCode 1
-        versionName "1.0(1.3)+(1.4))"
+        versionName "1.0(1.3)+(1.5+)"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         /*For now blur only*/
